--- a/index.html
+++ b/index.html
@@ -14,12 +14,83 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <main>
         <div class="left-side">
-        <div class="background-bubble"></div>
+            <div class="background-bubble bubble-left"></div>
+
+            <div class="phone">
+                <div class="phone-header">
+                    <div class="camera-area"></div>
+                    <div class="header-info">
+                        <div class="go-back-button">
+                            <div class="arrow">
+                                <?xml version="1.0" ?><svg height="20" viewBox="0 0 48 48" width="20" xmlns="http://www.w3.org/2000/svg"><path d="M30.83 32.67l-9.17-9.17 9.17-9.17-2.83-2.83-12 12 12 12z"/><path d="M0-.5h48v48h-48z" fill="none"/></svg>                            
+                            </div>
+                            <div class="profile-avatar">
+                                <img src="assets/images/avatar.jpg" alt="profile photo"/>
+                            </div>
+                        </div>
+                        <div class="person-details">
+                            <h2>Samuel Green</h2>
+                            <span class="person-status">Available to Walk</span>
+                        </div>
+                        <div class="hidden-menu-opener">
+                            <div class="dot"></div>
+                            <div class="dot"></div>
+                            <div class="dot"></div>
+                        </div>
+                    </div>
+                    </div>
+                    
+
+
+                <div class="phone-body">
+                    <div class="chat chat-left">That sounds great. I'd be happy to discuss more</div>
+                    <div class="chat chat-left last-message">Could you send over some pictures of your dog, please?</div>
+                    <div class="chat chat-right chat-right-images">
+                        <div class="image image1">
+                            <img src="assets/images/dog-image-1.jpg" alt="dog with its tongue out"/>
+                        </div>
+                        <div class="image image2">
+                            <img src="assets/images/dog-image-2.jpg" alt="dog sitting with its tongue out"/>
+                        </div>
+                        <div class="image image3">
+                            <img src="assets/images/dog-image-3.jpg" alt="dog holding a stick with its mouth"/>
+                        </div>
+                    </div>
+                    <div class="chat chat-right shadow">Here are a few pictures. She's a happy girl</div>
+                    <div class="chat chat-right last-message shadow"><span>Can you make it?</span></div>
+                    <div class="chat chat-left">She looks so happy! The time we discussed works. How long shall I take her out for?</div>
+                    <div class="chat chat-left chat-price">
+                        <div class="chat-price-radio"></div>
+                        <span class="chat-price-time">30 minute walk</span>
+                        <span class="chat-price-price">$29</span>
+                    </div>
+                    <div class="chat chat-left last-message chat-price">
+                        <div class="chat-price-radio"></div>
+                        <span class="chat-price-time">1 hour walk</span>
+                        <span class="chat-price-price">$49</span>
+                    </div>
+                    <form class="send-message-container">
+                        <input class="send-message" type="text" name="send-message" placeholder="Type a message..."></input>
+                        <button class="send-button">
+                            <div class="arrow">
+                                <?xml version="1.0" ?><svg height="15" viewBox="0 0 48 48" width="15" xmlns="http://www.w3.org/2000/svg"><path d="M30.83 32.67l-9.17-9.17 9.17-9.17-2.83-2.83-12 12 12 12z"/><path d="M0-.5h48v48h-48z" fill="none"/></svg>                            </div>
+                        </button>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div class="right-side"></div>
+
+        <div class="right-side">
+            <div class="right-side-text">
+                <h1>Simple booking</h1>
+                <p>Stay in touch with our dog walkers through the chat interface. This makes it easy to discuss arrangements and make bookings. Once the walk has been completed you can rate your walker and book again all through the chat.</p>
+            </div>
+            <div class="background-bubble-right"></div>
+        </div>
     </main>
 
 
